--- a/FriendListAppTest/Base.lproj/Main.storyboard
+++ b/FriendListAppTest/Base.lproj/Main.storyboard
@@ -135,7 +135,7 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
-        <!--Friend Detail View Controller-->
+        <!--FriendInfo-->
         <scene sceneID="Tfv-Si-CFo">
             <objects>
                 <viewController id="KMC-2b-p8n" customClass="FriendDetailViewController" customModule="FriendListAppTest" sceneMemberID="viewController">
@@ -143,20 +143,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Taw-5e-5jb">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <items>
-                                    <navigationItem title="Title" id="b4y-a2-R8q">
-                                        <barButtonItem key="leftBarButtonItem" title="close" id="85L-t7-Xi9">
-                                            <connections>
-                                                <action selector="closeWindow:" destination="KMC-2b-p8n" id="0L6-di-Zyg"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ca6-ce-XJY">
                                 <rect key="frame" x="0.0" y="80" width="375" height="507"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -165,13 +151,31 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="fgk-2s-Qs7"/>
                     </view>
+                    <navigationItem key="navigationItem" title="FriendInfo" id="26h-ia-CE3"/>
                     <connections>
                         <outlet property="FriendImageView" destination="ca6-ce-XJY" id="Oba-Dm-vbx"/>
+                        <segue destination="GW9-Fd-QB4" kind="show" identifier="goRemake" id="qbY-X7-YtX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AiD-2i-47C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1616.8" y="358.4707646176912"/>
+            <point key="canvasLocation" x="1998" y="1110"/>
+        </scene>
+        <!--FriendUpdate-->
+        <scene sceneID="cyr-BT-Jij">
+            <objects>
+                <viewController id="GW9-Fd-QB4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l1K-DS-DbD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="AuB-cz-oTV"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="FriendUpdate" id="RMB-e9-qQP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xZk-NI-gDp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2772" y="358.4707646176912"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="45X-lg-nSW">
@@ -189,7 +193,7 @@
             </objects>
             <point key="canvasLocation" x="-14" y="782"/>
         </scene>
-        <!--Friend List View Controller-->
+        <!--FliendList-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="FriendListViewController" customModule="FriendListAppTest" customModuleProvider="target" sceneMemberID="viewController">
@@ -198,7 +202,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1IM-P9-Kgo">
-                                <rect key="frame" x="0.0" y="83" width="375" height="522"/>
+                                <rect key="frame" x="0.0" y="169" width="375" height="436"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xRb-GF-spm">
@@ -227,7 +231,7 @@
                                 </subviews>
                             </scrollView>
                             <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KxB-9q-YPL">
-                                <rect key="frame" x="16" y="27" width="343" height="56"/>
+                                <rect key="frame" x="16" y="86" width="343" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
@@ -235,15 +239,15 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="contacts" id="cPa-gy-q4n"/>
+                    <navigationItem key="navigationItem" title="FliendList" id="GRn-H4-J8j"/>
                     <connections>
                         <outlet property="FriendListView" destination="xRb-GF-spm" id="e7l-lw-rbV"/>
-                        <segue destination="KMC-2b-p8n" kind="presentation" identifier="goDetail" id="fqP-9H-Tlt"/>
+                        <segue destination="KMC-2b-p8n" kind="show" identifier="goDetail" id="fqP-9H-Tlt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="359.37031484257875"/>
+            <point key="canvasLocation" x="1533.5999999999999" y="345.87706146926541"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -256,13 +260,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="opA-p2-nEj" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="t3u-yw-uO5" kind="relationship" relationship="viewControllers" id="df6-gj-a6g"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5wc-Y0-BGx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="opA-p2-nEj" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="cPa-gy-q4n"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gL3-PK-9gT">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="gIM-Qb-umj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Obw-Of-0wj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="748.79999999999995" y="358.92053973013498"/>
         </scene>
     </scenes>
     <resources>
